# texat_garfield

./: .gitignore  CMakeLists.txt  DetectorConfiguration.h  README.md  WireSet.h  ana_output.C  draw_field.cc  make_condor.py  read_output.C  texat_gas_simulation.cc
data/: output_1000_1_-3.00_3.00__0.root
